gobmkida/c3/attack3
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/attack3/src/engine/reading.c:3492:29: error: use of undeclared identifier 'byte_9C689F'
&& v22 != ( unsigned __int8)byte_9C689F[pos] 
                            ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/attack3/src/engine/reading.c:3493:29: error: use of undeclared identifier 'byte_9C688C'
&& v22 != ( unsigned __int8)byte_9C688C[pos] 
                            ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/attack3/src/engine/reading.c:3548:29: error: use of undeclared identifier 'byte_9C689F'
&& v22 != ( unsigned __int8)byte_9C689F[v126] 
                            ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/attack3/src/engine/reading.c:3549:29: error: use of undeclared identifier 'byte_9C688C'
&& v22 != ( unsigned __int8)byte_9C688C[v126] 
                            ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/attack3/src/engine/reading.c:3600:29: error: use of undeclared identifier 'byte_9C689F'
&& v22 != ( unsigned __int8)byte_9C689F[v127] 
                            ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/attack3/src/engine/reading.c:3601:29: error: use of undeclared identifier 'byte_9C688C'
&& v22 != ( unsigned __int8)byte_9C688C[v127] 
                            ^
6 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/attack3/src/obj/1/reading.o] Error 1
